# Head_Unit

./: .gitmodules  CMakeLists.txt  OTA_ARCHITECTURE.md  README.md  SSH_GUIDE.md  YOCTO_BUILD_GUIDE.md  Yocto.md  ota1.md  ota2.md
Head_Unit-Yocto/Head_Unit_jun/shell/: CMakeLists.txt
Head_Unit_jun/: .gitignore  CMakeLists.txt  Yocto.md  compile_commands.json  install_autostart.sh
Head_Unit_jun/build-cross/: compile_commands.json
Head_Unit_jun/build-cross/core/hu_core_autogen/: deps  mocs_compilation.cpp
Head_Unit_jun/build-cross/core/hu_core_autogen/5Z5WMX6UGY/: moc_ILedController.cpp.d  moc_IPdcSensorProvider.cpp.d  moc_IVehicleDataProvider.cpp.d
Head_Unit_jun/build-cross/core/hu_core_autogen/IVK4DJNV27/: moc_GearStateManager.cpp.d
Head_Unit_jun/build-cross/core/hu_core_autogen/NX6PWWVH4D/: moc_MockLedController.cpp.d  moc_MockPdcSensorProvider.cpp.d  moc_MockVehicleDataProvider.cpp.d  moc_SocketCanPdcProvider.cpp.d  moc_VSomeIPClient.cpp.d
Head_Unit_jun/build-cross/core/hu_core_autogen/ULO4IMYJZC/: moc_ShellClient.cpp.d
Head_Unit_jun/build-cross/shell/hu_shell_autogen/: deps
Head_Unit_jun/build-cross/shell/hu_shell_autogen/EWIEGA46WW/: moc_ClusterOutputWindow.cpp.d  moc_HUCompositor.cpp.d  moc_ModuleBridge.cpp.d  moc_ModuleController.cpp.d  moc_ModuleSurfaceWidget.cpp.d  moc_ShellWindow.cpp.d
Head_Unit_jun/build-cross/shell/hu_shell_autogen/IMAN36LHMA/: moc_GearPanel.cpp.d  moc_ReverseCameraWindow.cpp.d  moc_SplashScreen.cpp.d  moc_StatusBar.cpp.d  moc_TabBar.cpp.d
Head_Unit_jun/build-cross/shell/hu_shell_autogen/include/: GearPanel.moc.d
Head_Unit_jun/build-test/: compile_commands.json
Head_Unit_jun/build-test/core/hu_core_autogen/: deps
Head_Unit_jun/build-test/core/hu_core_autogen/5Z5WMX6UGY/: moc_ILedController.cpp.d  moc_IVehicleDataProvider.cpp.d
Head_Unit_jun/build-test/core/hu_core_autogen/IVK4DJNV27/: moc_GearStateManager.cpp.d
Head_Unit_jun/build-test/core/hu_core_autogen/NX6PWWVH4D/: moc_MockLedController.cpp.d  moc_MockVehicleDataProvider.cpp.d  moc_VSomeIPClient.cpp.d
Head_Unit_jun/build-test/shell/hu_shell_autogen/: deps  mocs_compilation.cpp
Head_Unit_jun/build_modular/: compile_commands.json
Head_Unit_jun/build_modular/core/hu_core_autogen/: deps
Head_Unit_jun/build_modular/shell/hu_shell_autogen/: deps
Head_Unit_jun/config/: kms_headunit.json  vsomeip_headunit.json
Head_Unit_jun/core/: CMakeLists.txt
Head_Unit_jun/core/hu_core_autogen/: deps
Head_Unit_jun/core/hu_core_autogen/5Z5WMX6UGY/: moc_ILedController.cpp.d  moc_IVehicleDataProvider.cpp.d
Head_Unit_jun/core/hu_core_autogen/IVK4DJNV27/: moc_GearStateManager.cpp.d
Head_Unit_jun/core/hu_core_autogen/NX6PWWVH4D/: moc_MockLedController.cpp.d  moc_MockVehicleDataProvider.cpp.d  moc_VSomeIPClient.cpp.d
Head_Unit_jun/core/hu_core_autogen/ULO4IMYJZC/: moc_ShellClient.cpp.d
Head_Unit_jun/core/interfaces/: IPdcSensorProvider.h
Head_Unit_jun/core/ipc/: MockPdcSensorProvider.cpp  MockPdcSensorProvider.h  SocketCanPdcProvider.cpp  SocketCanPdcProvider.h  VSomeIPClient.cpp
Head_Unit_jun/core/models/: PdcTypes.h
Head_Unit_jun/docs/: ARCHITECTURE.md  ROADMAP_ARCHITECTURE.md
Head_Unit_jun/docs/pdc/: ARCHITECTURE.md  CAN_SIGNAL_CONTRACT.md  IMPLEMENTATION_PLAN.md  README.md  UI_OVERLAY_SPEC.md  VERIFICATION_PLAN.md
Head_Unit_jun/instrument_cluster/: CMakeLists.txt
Head_Unit_jun/instrument_cluster/config/: vsomeip_cluster.json
Head_Unit_jun/instrument_cluster/python/: piracer_bridge.py
Head_Unit_jun/instrument_cluster/src/: MainWindow.cpp
Head_Unit_jun/instrument_cluster/src/ipc/: VSomeIPGearReceiver.cpp  VSomeIPGearReceiver.h
Head_Unit_jun/modules/ambient/: CMakeLists.txt  main.cpp
Head_Unit_jun/modules/ambient/hu_module_ambient_autogen/: deps
Head_Unit_jun/modules/call/: CMakeLists.txt  main.cpp
Head_Unit_jun/modules/call/hu_module_call_autogen/: deps
Head_Unit_jun/modules/common/: CMakeLists.txt
Head_Unit_jun/modules/media/: CMakeLists.txt  main.cpp
Head_Unit_jun/modules/media/hu_module_media_autogen/: deps
Head_Unit_jun/modules/media/ui/: MediaWindow.cpp
Head_Unit_jun/modules/navigation/: CMakeLists.txt  main.cpp
Head_Unit_jun/modules/navigation/hu_module_navigation_autogen/: deps
Head_Unit_jun/modules/settings/: CMakeLists.txt  main.cpp
Head_Unit_jun/modules/settings/hu_module_settings_autogen/: deps
Head_Unit_jun/modules/youtube/: CMakeLists.txt  main.cpp
Head_Unit_jun/modules/youtube/hu_module_youtube_autogen/: deps
Head_Unit_jun/shell/: CMakeLists.txt  ClusterOutputWindow.cpp  ClusterOutputWindow.h  HUCompositor.cpp  HUCompositor.h  ModuleController.cpp  ModuleSurfaceWidget.cpp  ModuleSurfaceWidget.h  PdcBeepController.cpp  PdcBeepController.h  PdcController.cpp  PdcController.h  ShellWindow.cpp  ShellWindow.h  main.cpp
Head_Unit_jun/shell/hu_shell_autogen/: deps
Head_Unit_jun/shell/hu_shell_autogen/2ZJUFHCLRC/: moc_MediaWindow.cpp.d
Head_Unit_jun/shell/hu_shell_autogen/7ASRNXCTGI/: moc_NavigationWindow.cpp.d
Head_Unit_jun/shell/hu_shell_autogen/AH7QHHJ3GK/: moc_SettingsWindow.cpp.d
Head_Unit_jun/shell/hu_shell_autogen/EJLZHAMGOP/: moc_CallWindow.cpp.d
Head_Unit_jun/shell/hu_shell_autogen/EWIEGA46WW/: moc_ModuleBridge.cpp.d  moc_ModuleController.cpp.d  moc_ShellWindow.cpp.d
Head_Unit_jun/shell/hu_shell_autogen/IMAN36LHMA/: moc_FallbackContentWidget.cpp.d  moc_GearPanel.cpp.d  moc_ReverseCameraWindow.cpp.d  moc_SplashScreen.cpp.d  moc_StatusBar.cpp.d  moc_TabBar.cpp.d
Head_Unit_jun/shell/hu_shell_autogen/MAWQTJWZFY/: moc_YouTubeWindow.cpp.d
Head_Unit_jun/shell/hu_shell_autogen/S3LRUBHHUX/: moc_MediaPlayer.cpp.d  moc_PlaylistModel.cpp.d
Head_Unit_jun/shell/hu_shell_autogen/VRSRXAKPFZ/: moc_AmbientWindow.cpp.d
Head_Unit_jun/shell/hu_shell_autogen/include/: GearPanel.moc.d
Head_Unit_jun/shell/widgets/: PdcOverlayPainter.cpp  PdcOverlayPainter.h  ReverseCameraWindow.cpp  ReverseCameraWindow.h  TabBar.cpp  TabBar.h
Head_Unit_jun/src/: MainWindow.cpp  MainWindow.h
Head_Unit_jun/src/ipc/: VSomeIPClient.cpp  VSomeIPClient.h
Head_Unit_jun/src/screens/: GearScreen.cpp  GearScreen.h
src/: MainWindow.h  (+1 more)
(+239 files in other folders)
